[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "goingnats"
authors = [{name = "Eugene Van den Bulke", email = "eugene.vandenbulke@gmail.com"}]
readme = "README.md"
dynamic = ["version", "description"]

[project.urls]
Home = "https://github.com/3kwa/goingnats"
